--- a/login.html
+++ b/login.html
@@ -37,38 +37,42 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                    <h1 class="h4 text-gray-900 mb-4">¡Bienvenido!</h1>
                   </div>
                   <form class="user">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                      <input type="email" class="form-control form-control-user" id="user" aria-describedby="emailHelp" placeholder="Usuario">
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                      <input type="password" class="form-control form-control-user" id="psw" placeholder="Contraseña">
                     </div>
                     <div class="form-group">
                       <div class="custom-control custom-checkbox small">
                         <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Remember Me</label>
+                        <label class="custom-control-label" for="customCheck">Recordarme</label>
                       </div>
                     </div>
                     <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Login
+                      Iniciar sesión
                     </a>
                     <hr>
-                    <a href="index.html" class="btn btn-google btn-user btn-block">
-                      <i class="fab fa-google fa-fw"></i> Login with Google
-                    </a>
-                    <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                      <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                    </a>
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                    <a class="small" href="forgot-password.html">¿Olvidaste tu contraseña?</a>
                   </div>
                   <div class="text-center">
-                    <a class="small" href="register.html">Create an Account!</a>
+                    <a class="small" href="register.html">Crear una cuenta</a>
+                  </div>
+                  <div class="text-center">
+                    <input type="button" name="btnVerifivaca" id="btnVerifica" onclick="validarUsuario()" value="verificar">
+                  </div>
+                  <div class="text-center">
+                    <p>Mostrar Warning "Hola Mundo"</p>
+                    <button onclick="holaMundo()">¡Hola Mundo!</button>
+                  </div>
+                  <div class="text-center">
+                    <a class="small" href="https://airsoftware.com.mx/#/index">Derechos Reservados © AIRsoftware 2020</a>
                   </div>
                 </div>
               </div>
@@ -91,6 +95,30 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.js"></script>
+
+  <script>
+    function holaMundo() {
+      alert("Hola Mundo");
+    }
+  </script>
+
+  <script type="text/javascript">
+    function validarUsuario()
+    {
+      var usuario = document.getElementById("user").value;
+      var contrasena = document.getElementById("psw").value;
+
+      if(usuario == "eduardo" && contrasena == "123456")
+      {
+        alert("Usuario y Contraseña validos");
+      }
+      else
+      {
+        alert("Datos incorrectos, verifica tus credenciales");
+      }
+    }
+  </script>
+
 
 </body>
 
